# rcontrol

./: .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  README.html  README.md  sdkconfig  sdkconfig.defaults
components/esp_hid/src/: ble_hidh.c
components/gamepad/: CMakeLists.txt
components/gamepad/include/: gamepad.h
components/gamepad/src/: gamepad.c
components/motor_driver/: CMakeLists.txt
components/motor_driver/include/: motor_driver.h
components/motor_driver/src/: motor_driver.c
components/mpu6050/: CMakeLists.txt
components/mpu6050/include/: mpu6050.h
components/mpu6050/src/: mpu6050.c
components/ssd1306/: CMakeLists.txt
components/ssd1306/include/: ssd1306.h
components/ssd1306/src/: ssd1306.c
components/st7735/: CMakeLists.txt
components/st7735/include/: st7735.h
components/st7735/src/: st7735.c
main/: CMakeLists.txt  Kconfig.projbuild  config.h  ds3231.c  ds3231.h  esp32_8bitdo_gamepad.c  gamepad.c  gamepad.h  i2c_manager.c  i2c_manager.h  index_html.h  lights.c  lights.h  main.c  motors.c  motors.h  mpu6050.c  mpu6050.h  rcontrol.c  sensors.c  sensors.h  ssd1306.c  ssd1306.h  web_server.c  web_server.h  wifi_connect.c  wifi_connect.h
